#54 button gap corrections

--- a/styles/newCustomer.module.scss
+++ b/styles/newCustomer.module.scss
@@ -728,6 +728,9 @@
                 }
 
                 .companyInvoiceFormButtonsWrapper {
+                    display: flex;
+                    gap: 15px;
+
                     button {
                         border-radius: 6px;
                         font-weight: 600;
@@ -1476,6 +1479,8 @@
                 .companyInvoiceFormButtonsWrapper {
                     margin-top: 33px;
                     margin-bottom: 25px;
+                    display: flex;
+                    gap: 15px;
 
                     button {
                         border-radius: 6px;
@@ -2209,6 +2214,8 @@
                 .companyInvoiceFormButtonsWrapper {
                     margin-bottom: 20px;
                     margin-top: 20px;
+                    display: flex;
+                    gap: 15px;
 
                     button {
                         border-radius: 6px;
